# Interface

./: README.md  package-lock.json
docs/: minecraft-auth-notes.md  runtime-roles.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/runtime/: .keep  README.md
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/core/: error.rs  http.rs  mod.rs
src-tauri/src/core/assets/: asset_index.rs  mod.rs
src-tauri/src/core/auth/: mod.rs
src-tauri/src/core/downloader/: client.rs  mod.rs
src-tauri/src/core/instance/: manager.rs  mod.rs  model.rs
src-tauri/src/core/java/: EMBEDDED_JAVA.md  mod.rs  paths.rs  runtime.rs
src-tauri/src/core/launch/: classpath.rs  mod.rs  task.rs
src-tauri/src/core/loaders/: context.rs  fabric.rs  forge.rs  installer.rs  mod.rs  neoforge.rs  quilt.rs  vanilla.rs
src-tauri/src/core/maven/: artifact.rs  mod.rs  pom.rs  resolver.rs
src-tauri/src/core/state/: app_state.rs  mod.rs
src-tauri/src/core/version/: manifest.rs  mod.rs  version_file.rs
src/styles/: base.css  components.css  layout.css  pages.css
src/styles/app/: base.css  buttons.css  components.css  instances.css  layout.css  pages.css  settings.css  sidebars.css  topbar.css
